--- a/ExamTrainer/gradle/libs.versions.toml
+++ b/ExamTrainer/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ navigationCompose = "2.7.7"
 materialIconsExtended = "1.5.0"
 ui = "1.6.0"
 uiToolingPreview = "1.5.4"
+lifecycleProcess = "2.8.7"
 
 [libraries]
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -43,6 +44,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
+androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycleProcess" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
